# error_system

./: .clangd  .gitignore  CMakeLists.txt  README.md
cmake/: ErrorSystemHelpers.cmake  ErrorSystemPerformance.cmake  error_system_config.cmake.in  error_system_performance.cmake  uninstall_manifest.cmake
config/errors/: payment_service_errors.json  redis_component_errors.json  trade_service_errors.json  user_service_errors.json
docs/: README.md  architecture.md  decision_tree.md  error_code_generation.md  error_dictionary.md
docs/api/: config.md  core.md  i18n.md  mapping.md  memory.md  migration.md  plugin.md  translator.md  utils.md
examples/: CMakeLists.txt  demo01.cc  demo02.cc  demo03.cc  demo04.cc  demo05.cc  demo06.cc  demo_01.cc  demo_02.cc
include/: error_system.h
include/error_system/config/: error_config.h  feature_flags.h  formatter_config.h  i18n_config.h  stacktrace_config.h
include/error_system/core/: duplicate_policy.h  error_builder.h  error_code.h  error_config.h  error_context.h  error_context_initializer.h  error_context_serializer.h  error_exception.h  error_formatter.h  error_level.h  error_metadata.h  error_registry.h  i_error_notifier.h  result.h  try_catch.h
include/error_system/core/details/: error_builder.inl  error_context.inl  result.inl
include/error_system/domain/: subsystem_module_registry.h  system_domain.h
include/error_system/i18n/: i18n.h  i_subsystem_module_resolver.h  locale.h  subsystem_module_catalog.h
include/error_system/i18n/languages/: en_US.json  zh_CN.json
include/error_system/mapping/: grpc_status.h  http_status.h  status_mapper.h
include/error_system/memory/: object_pool.h
include/error_system/migration/: error_migration.h
include/error_system/plugin/: async_notification_channel.h  error_dedup_sampler.h  error_router_plugin.h  i_error_plugin.h  plugin_registry.h
include/error_system/plugin/details/: plugin_registry.inl
include/error_system/translator/: error_translator.h
include/error_system/utils/: async_queue.h  error_formatter.h  file_utils.h  json_lexer.h  json_utils.h  source_location.h  stack_trace_utils.h  string_format.h  string_utils.h
include/error_system/utils/details/: async_queue.inl  string_format.inl  string_utils.inl
script/: generate_errors.sh
script/script_py/: generate_all.py  generate_error_codes.py  generate_error_dict.py  generate_error_docs.py
src/core/: duplicate_policy.cc  error_context.cc  error_context_initializer.cc  error_context_serializer.cc  error_context_serializer_binary.cc  error_context_serializer_internal.h  error_context_serializer_json.cc  error_context_serializer_text.cc  error_registry.cc
src/domain/: subsystem_module_registry.cc
src/i18n/: i18n.cc  subsystem_module_catalog.cc  translator_registry.cc
src/mapping/: grpc_status.cc  http_status.cc
src/migration/: error_migration.cc
src/plugin/: error_dedup_sampler.cc  error_router_plugin.cc  plugin_registry.cc
src/translator/: error_translator.cc
src/utils/: file_utils.cc  json_lexer.cc  json_utils.cc  stack_trace_utils.cc  string_utils.cc
tests/: CMakeLists.txt
tests/config/: error_config_test.cc  i18n_config_test.cc
tests/core/: error_builder_test.cc  error_code_test.cc  error_context_test.cc  error_exception_test.cc  error_level_test.cc  error_registry_test.cc  result_test.cc
tests/domain/: system_domain_test.cc
tests/i18n/: i18n_test.cc
tests/mapping/: status_mapper_test.cc
tests/memory/: object_pool_test.cc
tests/migration/: error_migration_test.cc
tests/perf/: error_context_benchmark.cc  error_registry_benchmark.cc  perf_common.h  plugin_registry_benchmark.cc  scenario_baseline_benchmark.cc  scenario_dedup_benchmark.cc  scenario_full_benchmark.cc  scenario_i18n_benchmark.cc  scenario_plugin_benchmark.cc  scenario_router_benchmark.cc  scenario_stacktrace_benchmark.cc  scenario_stacktrace_plugin_benchmark.cc
tests/plugin/: error_dedup_sampler_test.cc  error_router_plugin_test.cc  plugin_registry_test.cc
tests/translator/: error_translator_test.cc
tests/utils/: file_utils_test.cc  json_utils_test.cc  stack_trace_utils_test.cc  string_format_test.cc  string_utils_test.cc
